Remove obsolete JVM args